fix matchmaking